[project]
name = "fastapi-filter-sort"
version = "0.1.0"
description = "Smart filtering, sorting, and searching for FastAPI with SQLAlchemy"
authors = [
    {name = "Your Name bhadri01"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
packages = [{ include = "fastapi_filter_sort" }]
keywords = ["fastapi", "sqlalchemy", "filters", "search", "sort"]
homepage = "https://github.com/yourusername/fastapi-filter-sort"
repository = "https://github.com/yourusername/fastapi-filter-sort"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
python = "^3.12"
sqlalchemy = ">=2.*"
fastapi = ">=0.115.*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
