[tool.poetry]
name = "fastapi-querybuilder-jsonb"
version = "0.4.8"
description = "Smart filtering, sorting, and searching for FastAPI with SQLAlchemy (and JSONB)"
authors = ["Bhadri01 <bhadrinathan28@gmail.com>", "Bryan Frantz <bryan.frantz@nextierofs.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bryan-frantz-upp/fastapi-querybuilder-jsonb"
keywords = ["fastapi", "sqlalchemy", "filters", "query", "sort", "search", "pagination", "api", "rest"]

classifiers = [
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.30"
sqlalchemy = ">=2.0.20,<3.0.0"
fastapi_pagination = "0.13.2"
aiosqlite = ">=0.21.0"
greenlet = "^3.2.3"

[tool.coverage.paths]
source = ["fastapi_querybuilder_jsonb"]

[tool.coverage.run]
source = ["fastapi_querybuilder_jsonb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
