[tool.poetry]
name = "fastapi-querybuilder-jsonb"
version = "0.5.1"
description = "Smart filtering, sorting, and searching for FastAPI with SQLAlchemy (and JSONB)"
authors = ["Bhadri01 <bhadrinathan28@gmail.com>", "Bryan Frantz <bryan.frantz@nextierofs.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bryan-frantz-upp/fastapi-querybuilder-jsonb"
keywords = ["fastapi", "sqlalchemy", "filters", "query", "sort", "search", "pagination", "api", "rest"]

classifiers = [
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.30"
sqlalchemy = ">=2.0.20,<3.0.0"
fastapi_pagination = "0.13.2"
aiosqlite = ">=0.21.0"
greenlet = "^3.2.3"
mypy = "^1.19.1"
ruff = "^0.14.10"
pre-commit = "^4.5.1"

[tool.coverage.paths]
source = ["fastapi_querybuilder_jsonb"]

[tool.coverage.run]
source = ["fastapi_querybuilder_jsonb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Python version and module discovery
python_version = "3.13"
mypy_path = "src"
packages = ["nex_authx"]

# SQLAlchemy plugin for better ORM support
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Strictness settings (balanced for library development)
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_incomplete_defs = true
disallow_untyped_defs = false

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"

# Third-party library overrides (libraries without complete stubs)
[[tool.mypy.overrides]]
module = [
    "cerbos.*",
    "fastapi_querybuilder_jsonb.*",
    "redis.*",
    "redis.asyncio.*",
    "auth0.*",
    "jwt.*",
    "google.*",
    "google.protobuf.*",
    "nex-authx.*"
]
ignore_missing_imports = true

# Test files can be more lenient
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false


[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W", # pycodestyle/pyflakes
    "I", # import sorting
    "B", # bugbear
    "UP", # pyupgrade
    "SIM", # simplify
    "C4", # comprehensions
    "A", # builtins shadowing
    "S", # bandit-like rules (lightweight)
    "RUF", # ruff-specific
    "ASYNC", # async pitfalls
    "TID", # tidy imports
    "PT", # pytest style (if you use pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "SIM117"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Form",
    "fastapi.params.Form",
    "fastapi.Body",
    "fastapi.params.Body",
]

[tool.ruff.format]
quote-style = "double"
